syntax = "proto3";

package danmaku;
option go_package = "/dm";
message DmSegMobileReply {
  // 弹幕列表
  repeated DanmakuElem elems = 1;
  // 是否已关闭弹幕
  // 0:未关闭 1:已关闭
  int32 state = 2;
  // 弹幕云屏蔽ai评分值
  DanmakuAIFlag ai_flag = 3;
}
// 弹幕ai云屏蔽列表
message DanmakuAIFlag {
  // 弹幕ai云屏蔽条目
  repeated DanmakuFlag dm_flags = 1;
}
// 弹幕ai云屏蔽条目
message DanmakuFlag {
  // 弹幕dmid
  int64 dmid = 1;
  // 评分
  uint32 flag = 2;
}
// 弹幕条目
message DanmakuElem {
  // 弹幕dmid
  int64 id = 1;
  // 弹幕出现位置(单位ms)
  int32 progress = 2;
  // 弹幕类型
  int32 mode = 3;
  // 弹幕字号
  int32 fontsize = 4;
  // 弹幕颜色
  uint32 color = 5;
  // 发送着mid hash
  string midHash = 6;
  // 弹幕正文
  string content = 7;
  // 发送时间
  int64 ctime = 8;
  // 权重 区间:[1,10]
  int32 weight = 9;
  // 动作
  string action = 10;
  // 弹幕池
  int32 pool = 11;
  // 弹幕dmid str
  string idStr = 12;
  // 弹幕属性位(bin求AND)
  // bit0:保护 bit1:直播 bit2:高赞
  int32 attr = 13;
}